--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
                      <li class="content__list-item">
                         <a href="lesson5/Project1/index.html">Урок 5</a>
                     </li>
+                     <li class="content__list-item">
+                        <a href="lesson13/index.html">Урок 13</a>
+                    </li
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
