--- a/index.html
+++ b/index.html
@@ -113,6 +113,10 @@
                         <li class="content__list-item">
                         <a href="lesson14/index.html">Урок 14</a>
                     </li
+                        </li
+                        <li class="content__list-item">
+                        <a href="lesson15/index.html">Урок 15</a>
+                    </li
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
