--- a/index.html
+++ b/index.html
@@ -124,6 +124,10 @@
                         <li class="content__list-item">
                         <a href="lesson16/team.html">Урок 16</a>
                     </li
+                         </li>
+                        <li class="content__list-item">
+                        <a href="lesson17/index.html">Урок 17</a>
+                    </li
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
