--- a/index.html
+++ b/index.html
@@ -128,6 +128,10 @@
                         <li class="content__list-item">
                         <a href="lesson17/index.html">Урок 17</a>
                     </li
+                        </li>
+                        <li class="content__list-item">
+                        <a href="lesson18/index.html">Урок 18</a>
+                    </li
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
