--- a/index.html
+++ b/index.html
@@ -136,6 +136,9 @@
                         <li class="content__list-item">
                         <a href="lesson19/index.html">Урок 19</a>
                     </li
+                         <li class="content__list-item">
+                        <a href="lesson21/index.html">Урок 21</a>
+                    </li
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
