--- a/index.html
+++ b/index.html
@@ -143,6 +143,10 @@
                          <li class="content__list-item">
                         <a href="lesson28/index.html">Урок 28</a>
                          </li>
+                    </li>
+                         <li class="content__list-item">
+                        <a href="lesson36/index.html">Урок36</a>
+                         </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
