--- a/index.html
+++ b/index.html
@@ -95,6 +95,51 @@
                     <li class="content__list-item">
                         <a href="lesson-1/index.html">Урок 1</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="lesson2/index.html">Урок 2</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson3/index.html">Урок 3</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson4/index.html">Урок 4</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson5/Project1/index.html">Урок 5</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson13/index.html">Урок 13</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson14/index.html">Урок 14</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson15/index.html">Урок 15</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson16/index.html">Урок 16</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson17/index.html">Урок 17</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson18/index.html">Урок 18</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson19/index.html">Урок 19</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson21/index.html">Урок 21</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson28/index.html">Урок 28</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson36/index.html">Урок 36</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson43/index.html">Урок 43</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
