--- a/lesson51/index.html
+++ b/lesson51/index.html
@@ -97,7 +97,7 @@
                                 <div class="heading__rhomb"></div>
                                 <p class="menu-cards__text"></p>
                             </div>
-                            <div class="menu-cards-1__img"></div>
+                            <div class="menu-cards__img"></div>
                         </div>
                         <div class="menu-cards__content">
                             <div class="menu-cards__dish-panel dish-panel">
@@ -106,10 +106,10 @@
                                 <div class="heading__rhomb"></div>
                                 <p class="menu-cards__text"></p>
                             </div>
-                            <div class="menu-cards-1__img"></div>
+                            <div class="menu-cards__img"></div>
                         </div>
                         <div class="menu-cards__content">
-                            <div class="menu-cards-1__img"></div>
+                            <div class="menu-cards__img"></div>
                             <div class="menu-cards__dish-panel dish-panel">
                                 <span class="price"></span>
                                 <h3 class="menu-cards-title"></h3>
@@ -118,7 +118,7 @@
                             </div>
                         </div>
                         <div class="menu-cards__content">
-                            <div class="menu-cards-1__img"></div>
+                            <div class="menu-cards__img"></div>
                             <div class="menu-cards__dish-panel dish-panel">
                                 <span class="price"></span>
                                 <h3 class="menu-cards-title"></h3>
@@ -133,7 +133,7 @@
                                 <div class="heading__rhomb"></div>
                                 <p class="menu-cards__text"></p>
                             </div>
-                            <div class="menu-cards-1__img"></div>
+                            <div class="menu-cards__img"></div>
                         </div>
                         <div class="menu-cards__content">
                             <div class="menu-cards__dish-panel dish-panel">
@@ -142,10 +142,10 @@
                                 <div class="heading__rhomb"></div>
                                 <p class="menu-cards__text"></p>
                             </div>
-                            <div class="menu-cards-1__img"></div>
+                            <div class="menu-cards__img"></div>
                         </div>
                         <div class="menu-cards__content">
-                            <div class="menu-cards-1__img"></div>
+                            <div class="menu-cards__img"></div>
                             <div class="menu-cards__dish-panel dish-panel">
                                 <span class="price"></span>
                                 <h3 class="menu-cards-title"></h3>
@@ -154,7 +154,7 @@
                             </div>
                         </div>
                         <div class="menu-cards__content">
-                            <div class="menu-cards-1__img"></div>
+                            <div class="menu-cards__img"></div>
                             <div class="menu-cards__dish-panel dish-panel">
                                 <span class="price"></span>
                                 <h3 class="menu-cards-title"></h3>
