--- a/lesson51/index.html
+++ b/lesson51/index.html
@@ -83,7 +83,7 @@
                     <p class="menu-head__heading-subtitle heading-subtitle"></p>
                     <h2 class="menu-head__heading-title heading-title"></h2>
                     <div class="menu-head__heading-rhomb heading-rhomb"></div>
-                </div> Или так?-->
+                </div> Или так? если этот блок повторяется на сайте-->
                 <div class="menu-head__text">
                     <p class="menu-head__text-1"></p>
                     <div class="menu-signature__img">
