--- a/lesson51/index.html
+++ b/lesson51/index.html
@@ -78,12 +78,12 @@
                     <p class="menu-heading__subtitle"></p>
                     <h2 class="menu-heading__title"></h2>
                     <div class="menu-heading-rhomb__img rhomb__img">
-                        <img src="#" alt="" class="rhomb__img">
+                        <img src="#" alt="" class="rhomb__imeg">
                     </div>
                 </div>
                 <div class="menu-heading__paragraph">
                     <p class="menu-heading__text"></p>
-                    <div class="menu-heading__signature">
+                    <div class="menu-heading__img">
                         <img src="#" alt="">
                     </div>
                 </div>
