--- a/lesson51/index.html
+++ b/lesson51/index.html
@@ -83,7 +83,7 @@
                 </div>
                 <div class="menu-heading__paragraph">
                     <p class="menu-heading__text"></p>
-                    <div class="menu-heading__img">
+                    <div class="menu-heading-signature__img">
                         <img src="#" alt="">
                     </div>
                 </div>
