--- a/lesson51/index.html
+++ b/lesson51/index.html
@@ -13,7 +13,7 @@
             <div class="header__inner">
                 <a href="#" class="logo"></a>
                 <img src="" alt="">
-                <nav class="nav">
+                <nav class="header__nav">
                     <ul class="nav__list">
                         <li class="nav__item">
                             <a href="#" class="nav__link nav__link--carrent"></a>
