--- a/lesson54/index.html
+++ b/lesson54/index.html
@@ -41,9 +41,9 @@
     </section>
     <section class="figure">
         <div class="conteiner">
-            <div class="figure-inner">
-                <div class="figure-rectangle">
-                    <div class="figure-circle">
+            <div class="figure__inner">
+                <div class="figure__rectangle">
+                    <div class="figure__circle">
                     </div>
                 </div>
             </div>
