--- a/index.html
+++ b/index.html
@@ -179,6 +179,9 @@
                     <li class="content__list-item">
                         <a href="lesson92/index.html">Урок 92</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="wake-bake-92/index.html">Урок 95-126</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
