--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <div class="content__block hidden" id="diplomBlock">
                 <div class="content__title">Дипломный проект</div>
                 <div class="content__list-diplom">
-                    <a href="https://www.figma.com/design/LR0DuMxUqB326FD3QyWgJb/Landing-page---Экскурсии-на-квадроциклах?node-id=0-1&t=dmVXB8KCnmdWkHdf-0">Ссылка на ДЗ</a>
+                    <a href="CFMOTO/index.html">Ссылка на ДЗ</a>
                 </div>
                 <div class="content__decor">
                     <div class="content__decor-text">Давай проверим, чему ты научился!</div>
