--- a/CFMOTO/index.html
+++ b/CFMOTO/index.html
@@ -588,8 +588,8 @@
                     Наша команда
                 </h4>
                 <div class="team__bg">
-                    <img class="team__bg-left" src="/img/body/team/bg-left.jpeg" alt="">
-                    <img class="team__bg-right" src="/img/body/team/bg-right.jpeg" alt="">
+                    <img class="team__bg-left" src="img/body/team/bg-left.jpeg" alt="">
+                    <img class="team__bg-right" src="img/body/team/bg-right.jpeg" alt="">
                 </div>
                 <div class="team__people">
                     <div class="team__photo">
